# bach

./: .gitignore  AGENTS.md  AGENTS.template.de.md  AGENTS.template.md  BACH_HELP_REFERENCE.md  BACH_HELP_REFERENCE.template.de.md  BACH_HELP_REFERENCE.template.md  BACH_USER_MANUAL.en.md  BACH_USER_MANUAL.html  BACH_USER_MANUAL.md  BACH_USER_MANUAL.txt  CHAINS.md  CHAINS.template.de.md  CHAINS.template.md  CHANGELOG.md  CLAUDE.md  CLAUDE.template.de.md  CLAUDE.template.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  MEMORY.md  MEMORY.template.de.md  MEMORY.template.md  OLLAMA.md  PARTNERS.md  PARTNERS.template.de.md  PARTNERS.template.md  QUICKSTART.de.md  QUICKSTART.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  SKILL.template.de.md  SKILL.template.md  SKILLS.de.md  SKILLS.md  SKILLS.template.de.md  (+14 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  stale.yml
start/: README.md  bach.bat
system/tools/llmauto/: __init__.py  __main__.py  benchmark.py  config.json  llmauto.py  pyproject.toml
system/tools/llmauto/chains/: masterplan_1.json  masterplan_10.json  research_10.json  research_5.json  research_article.json  session_ati.json  session_financial_mail.json  session_wartung.json  software_10.json  software_3.json  software_fast_5.json  software_project.json  swarm_haiku_3.json  swarm_haiku_research.json
system/tools/llmauto/core/: __init__.py  config.py  runner.py  state.py
system/tools/llmauto/modes/: __init__.py  chain.py
system/tools/llmauto/prompts/: reviewer_opus.txt  reviewer_sonnet.txt  worker_opus.txt  worker_sonnet.txt
(+1553 files in other folders)
