[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "llmauto"
version = "0.1.0"
description = "LLM automation chains - standalone or with BACH"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Lukas Geiger"}
]

# Standalone: keine Abhaengigkeiten ausser Python stdlib
# BACH-Integration ist optional und wird zur Laufzeit erkannt

[project.scripts]
llmauto = "llmauto.llmauto:main"

[tool.setuptools.package-dir]
"llmauto" = "."
"llmauto.core" = "core"
"llmauto.modes" = "modes"

[tool.setuptools]
packages = ["llmauto", "llmauto.core", "llmauto.modes"]
